--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "browser": "dist/umd/index.js",
   "types": "dist/esm/index.d.ts",
   "repository": "https://github.com/charisma-ai/charisma-react",
-  "author": "charisma.ai",
+  "author": "charisma.ai <ben@charisma.ai>",
   "license": "MIT",
   "files": [
     "dist/*"
@@ -16,25 +16,29 @@
     "build": "tsc",
     "bundle": "rollup -c rollup.config.js",
     "cm": "git-cz",
-    "lint": "tslint src/*.ts src/*.tsx"
+    "lint": "tslint src/*.ts src/*.tsx",
+    "precommit": "lint-staged",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "charisma-sdk-js": "^0.1.2"
   },
   "devDependencies": {
-    "@types/react": "^16.4.9",
+    "@types/react": "^16.4.12",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.0-rc.13",
-    "lint-staged": "^7.2.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-commonjs": "^9.1.5",
+    "lint-staged": "^7.2.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "rollup": "^0.65.0",
+    "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-strip": "^1.1.1",
-    "rollup-plugin-typescript2": "^0.16.1",
+    "rollup-plugin-typescript2": "^0.17.0",
     "rollup-plugin-uglify": "^4.0.0",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.0.1"
   },
   "peerDependencies": {
