--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charisma-ai/react",
-  "version": "0.0.0-development",
+  "version": "0.1.0",
   "description": "Charisma.ai chat component for React",
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
