--- a/package.json
+++ b/package.json
@@ -22,25 +22,24 @@
   },
   "dependencies": {
     "@charisma-ai/sdk": "^0.3.1",
-    "immutability-helper": "^2.7.1"
+    "immutability-helper": "^2.8.1"
   },
   "devDependencies": {
-    "@types/react": "^16.4.12",
-    "commitizen": "^2.10.1",
+    "@types/react": "^16.4.16",
+    "commitizen": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.0.0-rc.13",
-    "lint-staged": "^7.2.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "rollup": "^0.65.0",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-strip": "^1.1.1",
-    "rollup-plugin-typescript2": "^0.17.0",
-    "rollup-plugin-uglify": "^4.0.0",
+    "husky": "^1.1.1",
+    "lint-staged": "^7.3.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "rollup": "^0.66.5",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-strip": "^1.2.0",
+    "rollup-plugin-typescript2": "^0.17.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.1.1"
   },
   "peerDependencies": {
     "react": "^16.4.2",
