--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@charisma-ai/react",
   "version": "0.2.3",
   "description": "Charisma.ai chat component for React",
-  "main": "dist/umd/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "browser": "dist/umd/index.js",
-  "types": "dist/esm/Charisma.d.ts",
+  "types": "dist/Charisma.d.ts",
   "repository": "https://github.com/charisma-ai/charisma-react",
   "author": "charisma.ai <ben@charisma.ai>",
   "license": "MIT",
@@ -13,33 +13,35 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "tsc",
-    "bundle": "rollup -c rollup.config.js",
+    "build": "cross-env NODE_ENV=production tsc && rollup -c && rimraf compiled",
     "cm": "git-cz",
     "lint": "tslint src/*.ts src/*.tsx",
+    "prebuild": "rimraf dist",
     "precommit": "lint-staged",
+    "prepublish": "yarn run build",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^0.3.1",
+    "@charisma-ai/sdk": "^0.4.0",
     "immutability-helper": "^2.8.1"
   },
   "devDependencies": {
-    "@types/react": "^16.4.16",
+    "@types/react": "^16.4.18",
     "commitizen": "^3.0.2",
+    "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.1.1",
+    "husky": "^1.1.2",
     "lint-staged": "^7.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "rollup": "^0.66.5",
-    "rollup-plugin-commonjs": "^9.1.8",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel-minify": "^6.1.1",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-strip": "^1.2.0",
-    "rollup-plugin-typescript2": "^0.17.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.3"
   },
   "peerDependencies": {
     "react": "^16.4.2",
