--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,21 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "jsx": "react",
-    "module": "es2015",
+    "declarationDir": "dist",
+    "esModuleInterop": true,
+    "lib": ["es2015", "dom"],
+    "module": "esnext",
     "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "compiled",
+    "removeComments": true,
+    "sourceMap": true,
     "strict": true,
-    "target": "es2015"
-  }
+    "target": "es2017"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
