--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charisma-ai/react",
-  "version": "0.4.0",
+  "version": "0.5.0-next.0",
   "description": "Charisma.ai chat component for React",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -21,26 +21,26 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^0.5.1",
-    "immutability-helper": "^2.9.0"
+    "@charisma-ai/sdk": "^0.6.0",
+    "immutability-helper": "^3.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.7.20",
+    "@types/react": "^16.7.22",
     "commitizen": "^3.0.5",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^8.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.1.0",
-    "rollup-plugin-babel-minify": "^6.2.0",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel-minify": "^7.0.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.4"
   },
   "peerDependencies": {
     "react": "^16.4.2",
