--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^0.6.0",
+    "@charisma-ai/sdk": "^0.7.0-next.0",
     "immutability-helper": "^3.0.0"
   },
   "devDependencies": {
