--- a/package.json
+++ b/package.json
@@ -26,11 +26,21 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.7",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "commitizen": "^3.0.7",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.15.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
@@ -38,8 +48,6 @@
     "rollup-plugin-babel-minify": "^7.0.0",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
-    "tslint": "^5.13.1",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3333"
   },
   "peerDependencies": {
@@ -49,7 +57,7 @@
   "lint-staged": {
     "linters": {
       "src/**/*.{ts,tsx}": [
-        "tslint --fix",
+        "eslint --fix",
         "git add"
       ]
     }
