--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^0.9.2",
+    "@charisma-ai/sdk": "^1.0.0-alpha.4",
     "immutability-helper": "^3.0.0"
   },
   "devDependencies": {
@@ -45,7 +45,6 @@
     "react-dom": "^16.8.6",
     "rimraf": "^2.6.3",
     "rollup": "^1.10.0",
-    "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
     "typescript": "^3.4.3"
