--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "declaration": true,
     "declarationDir": "dist",
     "esModuleInterop": true,
+    "jsx": "react",
     "lib": ["es2017", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
