--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Charisma.ai chat component for React",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/Charisma.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/charisma-ai/charisma-react",
   "author": "charisma.ai <ben@charisma.ai>",
   "license": "MIT",
