--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "^16.4.2"
   },
   "config": {
     "commitizen": {
