--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc && rollup -c && rimraf compiled",
     "cm": "git-cz",
-    "lint": "tslint src/*.ts src/*.tsx",
+    "lint": "eslint --fix --ext js,ts,tsx .",
     "prebuild": "rimraf dist",
     "prepublish": "yarn run build",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^1.1.0",
+    "@charisma-ai/sdk": "^1.2.0",
     "immutability-helper": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "^16.8.24",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@types/react": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "commitizen": "^4.0.3",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^5.15.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^6.2.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "husky": "^3.0.2",
-    "lint-staged": "^9.2.1",
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.19.3",
-    "rollup-plugin-commonjs": "^10.0.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.20.2",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^3.5.3"
   },
