--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^1.7.0-alpha.4",
+    "@charisma-ai/sdk": "^1.7.0",
     "immutability-helper": "^3.0.1",
     "p-queue": "^6.2.0"
   },
