--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@charisma-ai/react",
   "version": "1.9.0",
   "description": "Charisma.ai chat component for React",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "umd:main": "dist/index.umd.js",
+  "module": "dist/index.module.js",
   "types": "dist/index.d.ts",
+  "sideEffects": "false",
   "repository": "https://github.com/charisma-ai/charisma-react",
   "author": "charisma.ai <ben@charisma.ai>",
   "license": "MIT",
@@ -12,7 +15,9 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsc && rollup -c && rimraf compiled",
+    "build:non-umd": "microbundle --format modern,es,cjs --compress false --jsx React.createElement --jsxFragment React.Fragment",
+    "build:umd": "microbundle --format umd --name CharismaSDK --external react --jsx React.createElement --jsxFragment React.Fragment",
+    "build": "yarn run build:non-umd && yarn run build:umd",
     "cm": "git-cz",
     "lint": "eslint --fix --ext js,ts,tsx .",
     "prebuild": "rimraf dist",
@@ -20,38 +25,37 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^1.8.1",
-    "immutability-helper": "^3.0.2",
-    "p-queue": "^6.3.0"
+    "@charisma-ai/sdk": "^2.0.0-alpha.1",
+    "immutability-helper": "^3.1.1",
+    "p-queue": "^6.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@types/react": "^16.9.32",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "commitizen": "^4.0.3",
+    "@types/react": "^16.9.43",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "commitizen": "^4.1.2",
     "cross-env": "^7.0.2",
-    "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.1.2",
-    "prettier": "^2.0.3",
+    "cz-conventional-changelog": "^3.2.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "microbundle": "^0.12.2",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.3.3",
-    "typescript": "^3.8.3"
+    "semantic-release": "^17.1.1",
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "react": "^16.4.2"
+    "react": "^16.8.0"
   },
   "config": {
     "commitizen": {
