--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build:non-umd": "microbundle --format modern,es,cjs --compress false --jsx React.createElement --jsxFragment React.Fragment",
-    "build:umd": "microbundle --format umd --name CharismaSDK --external react --jsx React.createElement --jsxFragment React.Fragment",
+    "build:umd": "microbundle --format umd --name CharismaReact --external react --jsx React.createElement --jsxFragment React.Fragment",
     "build": "yarn run build:non-umd && yarn run build:umd",
     "cm": "git-cz",
     "lint": "eslint --fix --ext js,ts,tsx .",
@@ -25,7 +25,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^2.0.0-alpha.1",
+    "@charisma-ai/sdk": "^2.0.0-alpha.2",
     "immutability-helper": "^3.1.1",
     "p-queue": "^6.5.0"
   },
