--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charisma-ai/react",
-  "version": "2.0.0-alpha.10",
+  "version": "2.0.0",
   "description": "Charisma.ai chat component for React",
   "source": "src/index.ts",
   "main": "dist/index.js",
