--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^3.0.0",
+    "@charisma-ai/sdk": "^3.1.0-alpha.1",
     "immutability-helper": "^3.1.1",
     "p-queue": "^6.6.2"
   },
