--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.module.js",
   "types": "dist/index.d.ts",
-  "sideEffects": "false",
+  "sideEffects": false,
   "repository": "https://github.com/charisma-ai/charisma-react",
   "author": "charisma.ai <ben@charisma.ai>",
   "license": "MIT",
@@ -16,43 +16,44 @@
   ],
   "scripts": {
     "build:non-umd": "microbundle --format modern,es,cjs --compress false --jsx React.createElement --jsxFragment React.Fragment",
-    "build:umd": "microbundle --format umd --name CharismaReact --external react --jsx React.createElement --jsxFragment React.Fragment",
+    "build:umd": "microbundle --format umd --name CharismaReact --external react --jsx React.createElement --jsxFragment React.Fragment --alias httpie=./node_modules/httpie/xhr/index.js",
     "build": "yarn run build:non-umd && yarn run build:umd",
     "cm": "git-cz",
     "lint": "eslint --fix --ext js,ts,tsx .",
     "prebuild": "rimraf dist",
     "prepublish": "yarn run build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^3.2.0",
+    "@charisma-ai/sdk": "^3.3.0-alpha.1",
     "immutability-helper": "^3.1.1",
     "p-queue": "^6.6.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "commitizen": "^4.2.3",
+    "@types/react": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.5.4",
-    "microbundle": "^0.13.0",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2",
+    "microbundle": "^0.13.3",
+    "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.9",
-    "typescript": "^4.2.2"
+    "semantic-release": "^18.0.0",
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0"
