--- a/package.json
+++ b/package.json
@@ -26,34 +26,34 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^3.3.0-alpha.1",
+    "@charisma-ai/sdk": "^3.4.1",
     "immutability-helper": "^3.1.1",
     "p-queue": "^6.6.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@types/react": "^17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^11.1.2",
-    "microbundle": "^0.13.3",
-    "prettier": "^2.4.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "microbundle": "^0.14.2",
+    "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "semantic-release": "^18.0.0",
-    "typescript": "^4.4.3"
+    "semantic-release": "^18.0.1",
+    "typescript": "^4.5.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0"
