--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^3.9.0",
+    "@charisma-ai/sdk": "^4.0.0-alpha.2",
     "immutability-helper": "^3.1.1",
     "p-queue": "^6.6.2"
   },
