--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,17 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist",
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "lib": ["esnext", "dom"],
+    "lib": ["ES2022", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "compiled",
+    "outDir": "dist",
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
