--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "4.0.0-alpha.1",
   "description": "Charisma.ai chat component for React",
   "source": "src/index.ts",
-  "main": "dist/index.js",
-  "umd:main": "dist/index.umd.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "sideEffects": false,
   "repository": "https://github.com/charisma-ai/charisma-react",
   "author": "charisma.ai <ben@charisma.ai>",
@@ -15,9 +14,7 @@
     "dist/*"
   ],
   "scripts": {
-    "build:non-umd": "microbundle --format modern,es,cjs --compress false --jsx React.createElement --jsxFragment React.Fragment",
-    "build:umd": "microbundle --format umd --name CharismaReact --external react --jsx React.createElement --jsxFragment React.Fragment --alias httpie=./node_modules/httpie/xhr/index.js",
-    "build": "pnpm run build:non-umd && pnpm run build:umd",
+    "build": "tsc && swc src -d dist",
     "cm": "git-cz",
     "lint": "eslint --fix --ext js,ts,tsx .",
     "prebuild": "rimraf dist",
@@ -26,37 +23,38 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "^4.0.0-alpha.2",
+    "@charisma-ai/sdk": "^4.0.0-alpha.5",
     "immutability-helper": "^3.1.1",
-    "p-queue": "^6.6.2"
+    "p-queue": "^7.3.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.37",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "commitizen": "^4.2.6",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.57",
+    "@types/react": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.29.0",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.1.0",
-    "microbundle": "^0.15.1",
-    "prettier": "^2.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.5",
-    "typescript": "^4.9.4"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.0",
+    "semantic-release": "^21.0.2",
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "config": {
     "commitizen": {
