--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "declarationDir": "dist",
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "jsx": "react",
     "lib": ["ES2022", "dom"],
     "module": "esnext",
