--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "4.0.5-alpha.2",
+    "@charisma-ai/sdk": "4.0.5",
     "immutability-helper": "^3.1.1",
     "p-queue": "^7.3.4"
   },
