--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
