feat[#72]: update js sdk

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "5.0.8",
+    "@charisma-ai/sdk": "6.0.0-alpha.1",
     "immutability-helper": "^3.1.1",
     "p-queue": "^7.3.4"
   },
@@ -70,5 +70,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
