[rnd]: expose audio manager new audio stream/analyser node functions, and point at rnd charisma sdk branch

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@charisma-ai/sdk": "5.0.8",
+    "@charisma-ai/sdk": "git+https://github.com/charisma-ai/charisma-sdk-js.git#rnd-expose-audio-streams",
     "immutability-helper": "^3.1.1",
     "p-queue": "^7.3.4"
   },
