feat[#73]: install ts-node, fix various typing errors around audio manager and its test file

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rimraf": "^5.0.0",
     "semantic-release": "^21.0.2",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
