--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": ["jest", "@testing-library/jest-dom"],
+    "allowImportingTsExtensions": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
