--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepublish": "pnpm run build",
     "semantic-release": "semantic-release",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "vitest --config ./vitest.config.ts"
   },
   "dependencies": {
     "@charisma-ai/sdk": "6.0.0",
@@ -35,7 +35,7 @@
     "@swc/core": "^1.3.57",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -52,16 +52,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.0",
     "semantic-release": "^21.0.2",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^3.1.1"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
