--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "isolatedModules": true,
     "jsx": "react",
     "lib": ["ES2022", "dom"],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -18,7 +18,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": []
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
