feat[#73]: implement PR feedback

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,5 +39,13 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.test.{js,ts,jsx,tsx}", "**/test/**", "**/__tests__/**"],
+      "rules": {
+        "import/no-extraneous-dependencies": "off"
+      }
+    }
+  ]
 }
