--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepublish": "pnpm run build",
     "semantic-release": "semantic-release",
     "prepare": "husky install",
-    "test": "vitest --config ./vitest.config.ts"
+    "test": "vitest"
   },
   "dependencies": {
     "@charisma-ai/sdk": "6.0.0",
@@ -33,9 +33,8 @@
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.57",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
