feat[#73]: remove vite references from tsconfig, create ts test config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "react",
     "lib": ["ES2022", "dom"],
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -18,12 +18,10 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "types": ["vitest/globals"]
+    "types": []
   },
   "include": [
-    "src",
-    "node_modules/.pnpm/vitest@3.1.1_@types+node@22.13.17_jiti@2.4.2_jsdom@26.0.0/node_modules/vitest/globals.d.ts",
-    "node_modules/.pnpm/vitest@3.1.1_@types+node@22.13.17_jiti@2.4.2_jsdom@26.0.0/node_modules/vitest/globals.d.ts"
+    "src"
   ],
   "exclude": ["node_modules", "dist"]
 }
