--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,6 @@
     "target": "esnext",
     "types": []
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
